--- a/src/Common/Components/Header/Header.module.scss
+++ b/src/Common/Components/Header/Header.module.scss
@@ -1,5 +1,17 @@
 @import "../../variables.module.scss";
 
 .header {
-  background: $white;
+  top: 0;
+  position: fixed;
+  right: 0;
+  left: 0;
+  z-index: 10;
+  box-shadow: 0 0.25rem 0.75rem 0 $light-grey;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: row;
+  .logo {
+    width: 3.125rem;
+  }
 }
