--- a/src/Pages/ProductListPage/ProductListPage.module.scss
+++ b/src/Pages/ProductListPage/ProductListPage.module.scss
@@ -19,7 +19,21 @@
       border-top: 0.063rem solid $light-grey;
       min-height: 17.5rem;
       display: flex;
-      align-items: center;
+      // align-items: center;
+      flex-direction: column;
+      .paginationWrapper {
+        border-top: 0.063rem solid $light-grey;
+        width: 100%;
+        margin-top: 1rem;
+        padding-top: 2rem;
+        display: flex;
+        justify-content: center;
+        .pagination {
+          .ant-pagination-item {
+            border: 1px solid transparent !important;
+        }
+        }
+      }
     }
   }
 }
