--- a/src/Pages/ProductListPage/Components/FilterGroup/FilterGroup.module.scss
+++ b/src/Pages/ProductListPage/Components/FilterGroup/FilterGroup.module.scss
@@ -5,5 +5,15 @@
     & > label {
       margin-left: 0px;
     }
+    .checboxValueWrapper {
+      display: grid;
+      grid-template-columns: 4fr 1fr;
+      align-items: center;    
+      .colorIcon {
+        width: 1rem;
+        height: 1rem;
+        border-radius: 50%;
+      }
+    }
   }
 }
